Fix: z-index

--- a/assets/scss/_collaboration.scss
+++ b/assets/scss/_collaboration.scss
@@ -114,7 +114,6 @@
         -webkit-backdrop-filter: blur(28px) saturate(160%);
         font-family: 'Inter', sans-serif;
         position: relative;
-        z-index: 5;
 
         // Header
         .card-header {
